webgl, cros: RGB texture backed by native GMB cannot bind to FBO

RGB texture backed by native GMB cannot bind to FBO, so WebGL needs to allocate
RGBA and emulate RGB.

BUG=746069
TEST=run WebGL Aquarium on eve

Change-Id: I0e74f738beff16826dcc7af5684791712923851c