gpu/ipc/service/gpu_memory_buffer_factory_io_surface.h
@@ -59,7 +59,7 @@ class GPU_EXPORT GpuMemoryBufferFactoryIOSurface
       gfx::BufferFormat format,
       unsigned internalformat) override;
   unsigned RequiredTextureType() override;
-  bool SupportsFormatRGB() override;
+  bool SupportsFormatRGBRenderTarget() override;
 
  private:
   typedef std::pair<gfx::IOSurfaceId, int> IOSurfaceMapKey;
